2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: OFF_T

	* gi.h (OFF_T): New #define, bifurcated on ‘GI_LEVEL (1, 9)’.
	* libpq.c (lob_seek): Use ‘OFF_T’ in decl and definition.

2015-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Use ‘KEYWORD’ from Guile-BAUX.

	* libpq.c (pg_conndefaults): ...here.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Allow string COMPOSED for ‘define-db-col-type-array-variant’.

	* postgres-types.scm (define-db-col-type-array-variant):
	...here, converting it internally to a symbol if necessary.
	<top-level>: Use string in ‘define-db-col-type-array-variant’
	calls for ‘text[]’, ‘text[][]’, ‘int4[]’ and ‘aclitem[]’.

2015-01-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Convert array type names from trailing "[]" to leading "*".

	* postgres-meta.scm (*class-defs*): ...here.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: DECLARE_SMOB_NAME

	* libpq.c (DECLARE_SMOB_NAME): New macro.
	(xc_name, lob_name, res_name, sepo_name): Use it.

2015-01-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Convert array type names from trailing "[]" to leading "*".

	* postgres-meta.scm (infer-defs): ...here, in doc-comment.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘type-sql-name’ more.

	* postgres-table.scm: Import ‘(database postgres-types) type-sql-name’.
	(pgtable-manager create): Use ‘type-sql-name’.

2015-01-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add (database postgres-types) proc: register-array-variant

	* postgres-types.scm (ARRAY-VARIANT-INFO): New hash table.
	(av-lookup, make-array-variant-info, av-sql-name, av-rank)
	(av-simple, av-canonical): New procs.
	(dbcoltype-lookup): Canonicalize ‘ALL’ key.
	(type-sql-name): If TYPE is an array variant, use
	the SQL name per its ‘ARRAY-VARIANT-INFO’ entry.
	(register-array-variant): New proc, exported.
	(define-db-col-type-array-variant): Use ‘register-array-variant’;