@@ -111,6 +111,28 @@
             (cons (type-objectifier type)
                   objectifiers)))
 
+    (define (three-part type title expr)
+      (and (string? expr) (bad-select-part expr))
+      (push! (cond ((symbol? type)
+                    type)
+                   ((eq? #f type)
+                    'text)
+                   ((and (eq? #t type)
+                         (or (assq expr defs)
+                             (bad-select-part expr)))
+                    => def:type-name)
+                   ((and (pair? type)
+                         (eq? #t (car type))
+                         (symbol? (cdr type))
+                         (or (assq (cdr type) defs)
+                             (bad-select-part (cdr type))))
+                    => def:type-name)
+                   (else
+                    (bad-select-part type))))
+      (if title
+          (cons title expr)
+          expr))
+
     (define (munge x)
       (cond ((symbol? x)
              (or (and=> (assq x defs)
@@ -119,26 +141,7 @@
                  (bad-select-part x))
              x)
             ((and (list? x) (= 3 (length x)))
-             (apply-to-args
-              x (lambda (type title expr)
-                  (and (string? expr) (bad-select-part expr))
-                  (push! (cond ((symbol? type)
-                                type)
-                               ((eq? #f type)
-                                'text)
-                               ((and (eq? #t type)
-                                     (or (assq expr defs)
-                                         (bad-select-part expr)))
-                                => def:type-name)
-                               ((and (pair? type)
-                                     (eq? #t (car type))
-                                     (symbol? (cdr type))
-                                     (or (assq (cdr type) defs)
-                                         (bad-select-part (cdr type))))
-                                => def:type-name)
-                               (else
-                                (bad-select-part type))))
-                  (if title (cons title expr) expr))))
+             (apply three-part x))
             (else
              (bad-select-part x))))
 
